test/sema/exercise/struct_resolution_error_keep_going.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S { f: void }
// CHECK: [[# @LINE - 1 ]]:12: error: struct member cannot be void

struct S2 {}

struct S3 {}

struct S4 { f: void }
// CHECK: [[# @LINE - 1 ]]:13: error: struct member cannot be void

fn main(): void {}
